--- a/style.css
+++ b/style.css
@@ -1,1 +1,7 @@
-
+body {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1.8rem; /* 18px */
+  font-weight: 400;
+  line-height: 1.4;
+  color: blue; 
+}
