--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-body {
+h1 {
   font-family: 'Open Sans', sans-serif;
-  font-size: 1.8rem; /* 18px */
+  font-size: 128rem; /* 18px */
   font-weight: 400;
   line-height: 1.4;
   color: blue; 
