--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 /* Custom properties/variables  */
 :root {
-  --main-white: #f0f0f0;
+  --main-green: #C7C59;
   --main-red: #be3144;
   --main-blue: #45567d;
   --main-gray: #303841;
@@ -73,7 +73,7 @@ ul {
   top: 0;
   left: 0;
   width: 100%;
-  background: 0C7C59;
+  background: #C7C59;
   box-shadow: 0 2px 0 rgba(0, 0, 0, 0.4);
   z-index: 10;
 }
