--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 
 /* Custom properties/variables  */
 :root {
-  --main-green: #C7C59;
-  --main-red: #be3144;
-  --main-blue: #45567d;
-  --main-gray: #303841;
+  --dark-green: #C7C59;
+  --light-green: #be3144;
+  --light-blue: #E7F4FF;    
 }
 
 /* Base reset */
