--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ ul {
   top: 0;
   left: 0;
   width: 100%;
-  background: #C7C59;
+  background: #0C7C59;
   box-shadow: 0 2px 0 rgba(0, 0, 0, 0.4);
   z-index: 10;
 }
