--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 /* Custom properties/variables  */
 :root {
-  --dark-green: #C7C59;
+  --dark-green: #0C7C59;
   --light-green: #be3144;
   --light-blue: #E7F4FF;    
 }
