--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
 /* Custom properties/variables  */
 :root {
   --dark-green: #0C7C59;
-  --dark-blue: #0F4D92;
+  --darker-blue: #0F4D92;
+  --dark-blue: #0084ff;
   --light-green: #9CE6C0;
   --light-blue: #E7F4FF;    
   --charcoal: #454D54;
@@ -32,6 +33,13 @@ html {
   scroll-behavior: smooth;
 }
 
+/* I am using the em unit for breakpoints
+ * The calculation is the following
+ * screen size divided by browser base font size
+ * As an example: a breakpoint at 980px
+ * 980px / 16px = 61.25em
+*/
+
 /* 1200px / 16px = 75em */
 @media (max-width: 75em) {
   html {
@@ -53,33 +61,54 @@ html {
   }
 }
 
-
 body {
    font-family: 'Source Sans Pro', sans-serif;
 }
 
-h1 {
-  font-size: 10rem; 
-  color: ;
+.blank {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  z-index: 9; 
+  padding: 2rem;
 }
 
+/*Navigation Bar*/
 ul {
   list-style: none;
 }
-
 .nav {
   display: flex;
   justify-content: flex-end;
   position: fixed;
-  top: 0;
   left: 0;
   width: 100%;
   z-index: 10;
+  background: var(--light-blue);
 }
 
 .nav-list {
   display: flex;
   margin-right: 2rem;
+}
+
+.nav-list a {
+  display: block;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 300; 
+  font-size: 2.5rem;
+  padding: 2rem;
+  text-decoration: none;
+  color: var(--charcoal);
+}
+
+.nav-list a:visited{
+  color: var(--charcoal);
+}
+
+.nav-list a:hover {
+  color: var(--dark-blue);
+  font-weight: bold;
 }
 
 @media (max-width: 28.75em) {
@@ -92,18 +121,82 @@ ul {
   }
 }
 
-.nav-list a {
+/*Welcome Section*/
+.welcome-section {
+  border-top: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  background-color: var(--dark-green);
+  font-size: 5rem;
+  font-weight: 300;
+  color: white;
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("images/ut.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
+.welcome-section > p {
+  font-size: 3rem;
+  font-weight: 300;
+  font-style: italic;
+  color: white;
+}
+
+/*Interests Section*/
+.interests {
+  text-align: center;
+  padding: 10rem 2rem;
+  background: var(--darker-blue);
+}
+
+.interests-header {
+  max-width: 640px;
+  margin: 0 auto 6rem auto;
+  border-bottom: 0.2rem solid var(--main-white);
+}
+
+@media (max-width: 28.75em) {
+  .projects-section-header {
+    font-size: 4rem;
+  }
+}
+
+.interests-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  grid-gap: 4rem;
+  width: 100%;
+  max-width: 1280px;
+  margin: 0 auto;
+  margin-bottom: 6rem;
+}
+
+@media (max-width: 30.625em) {
+  .interests {
+    padding: 6rem 1rem;
+  }
+
+  .interests-grid {
+    grid-template-columns: 1fr;
+  }
+}
+
+img {
   display: block;
-  font-size: 2.2rem;
-  padding: 2rem;
-  text-decoration: none;
-  color: var(--charcoal);
+  width: 100%;
 }
 
-.nav-list a:visited{
-  color: var(--charcoal);
+.interests-image{
+  height: calc(100% - 6.8rem);
+  width: 100%;
+  object-fit: cover;
 }
 
-.nav-list a:hover {
-  color: var(--dark-blue);
+.interests-title {
+  font-size: 2rem;
+  padding: 2rem 0.5rem;
 }
