--- a/style.css
+++ b/style.css
@@ -228,6 +228,9 @@ ul {
   width: 100%; 
   height: calc(100% - 6.8rem); 
 }
+.tech{
+  overflow: hidden;
+}
 
 .project-title {
   font-size: 2rem;
