--- a/style.css
+++ b/style.css
@@ -132,10 +132,10 @@ ul {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100vh;
   background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("images/ut.jpg");
   background-size: cover;
   background-position: center;
+  height: 100vh;
 }
 
 .welcome-text{
@@ -149,6 +149,7 @@ ul {
   justify-content: center;
   align-items: center;
   position: relative; 
+  height: auto; 
 }
 
 .welcome-text p{
@@ -160,6 +161,7 @@ ul {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: auto; 
 }
 
 .welcome-text:hover span{
@@ -170,7 +172,9 @@ ul {
   content: "I am student at the University of Texas at Austin studying Business Honors and Electrical & Computer Engineering. I am interested in sports analytics, product management, and entreprenuership. In my free time, I love to play spikeball and basketball and watch standup!";
   font-family: 'Source Sans Pro', sans-serif;
   text-align: justify;
-  font-size: 3rem; 
+  font-size: 3rem;
+  width: auto; 
+  height: auto;   
 }
 
 /*Interests Section*/
@@ -178,7 +182,6 @@ ul {
   text-align: center;
   padding: 5rem 2rem 3rem;
   background: white;
-  height: 100vh;
 }
 
 .interests-header {
@@ -213,11 +216,10 @@ ul {
 .interests-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-gap: 5vw;
+  grid-column-gap: 6vw;
+  grid-row-gap: 6vw;
   margin-bottom: 6rem;
-  width: auto; 
   margin-top: 15rem; 
-  height: 35rem; 
   margin-left: 10rem;
   margin-right: 10rem; 
 }
